--- a/ng2-stompjs-angular7/src/index.html
+++ b/ng2-stompjs-angular7/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ng2StompjsAngular7</title>
+  <title>Sec Chat</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="console">
   <app-root></app-root>
 </body>
 </html>
